@@ -1,3 +1,9 @@
+2014-05-31  Larus  <larus@Jim-MacBook-Air.local>
+
+	* spim/spim.c [Jorge Garcia Aguilar <jorgegarag@gmail.com>]:
+	Add -dump and -dump_kernel flags to write data and text segments
+	to a file.
+
 2014-02-02  Larus  <larus@Jim-MacBook-Air.local>
 
 	* Setup/QtSpim_Mac_Deployment/QtSpim_Mac_pkproj:
